--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
              html,body{
                 margin:0;
                 max-width:360px;
-                
+                overflow-x:hidden;
              }
              .tags{
                 display: none;
