--- a/index.html
+++ b/index.html
@@ -268,6 +268,7 @@
                 display: flex;
                 flex-direction: column;
                 align-items: center;
+                padding:0;
             }
             .tags{
                 position: absolute;
