--- a/index.html
+++ b/index.html
@@ -265,10 +265,10 @@
                 
              }
              .tags ul{
+                padding:0;
                 display: flex;
                 flex-direction: column;
                 align-items: center;
-                padding:0;
             }
             .tags{
                 position: absolute;
@@ -284,9 +284,8 @@
                 text-align: center;
             }
             #bars{
-            position: absolute;
             top:0;
-            left:95%;
+            left:10%;
         }
             .tags li{
                 margin:30px auto;
@@ -303,8 +302,8 @@
                 height:450px;
              }
              .page12{
-                width:360px;
-                margin-left:-50px;
+                max-width:360px;
+                margin-left:-30px;
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
@@ -312,11 +311,6 @@
              .page12 img{
                 width:90px;
                 height:90px;
-             }
-             .bars{
-                margin:0;
-                margin-left:-30px;
-                margin-top:20px;
              }
              .page13{
                 width:360px;
