--- a/index.html
+++ b/index.html
@@ -290,6 +290,7 @@
             .tags li{
                 margin:30px auto;
                 color:whitesmoke;
+                margin-left:-20px;
             }
             .call{
                 display: none;
