--- a/index.html
+++ b/index.html
@@ -606,9 +606,10 @@
                 .page2 img{
                     width:600px;
                     height:200px;
-                    margin-left:240px;
+                    margin-left:140px;
                 }
-                .page2 .image2{
+                .image2{
+                    width:700px;
                     margin-left: -300px;
                 }
                 .page3,.page4,.page5,.page6,.page7,.page8,.page10,.page11,.page121{
@@ -694,7 +695,7 @@
                     min-height: 500px;
                     display: flex;
                     flex-direction: column;
-                    justify-content: ;
+                    justify-content: center;
                     align-items: center;
                 }
                 .page122{
