--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@
         @media  screen and (min-width:361px) and (max-width:720px){
                 body{
                     width:720px;
-                    overflow-x: hidden;
+                    overflow-x: hidden; 
                 }
                 .tags ul{
                 padding:0;
@@ -594,11 +594,11 @@
                     margin-top:60px;
                 }
                 .page1{
-                    max-width:720px;
+                    width:910px;
                     height:500px;
                 }
                 .page12{
-                    max-width:680px;
+                    width:880px;
                 }
                 .page2{
                     max-width:720px;
