--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
             .tags{
                 position: absolute;
                 width:80px;
-                top:10%;
+                top:15%;
                 left:75%;
                 height:300px;
                 background:#f3df11;
@@ -303,8 +303,8 @@
                 height:450px;
              }
              .page12{
-                max-width:380px;
-                margin-left:-30px;
+                max-width:360px;
+                margin-left:-10px;
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
@@ -312,6 +312,7 @@
              .page12 img{
                 width:90px;
                 height:90px;
+                margin:0;
              }
              .page13{
                 width:400px;
@@ -348,19 +349,19 @@
              }
              .page4{
                 width:400px;
-                height:1550px;
+                height:1560px;
              }
              .page41 {
                width:80%;
              }
              .page41 h1{
-                margin-left:20px;
+                margin-left:55px;
                 font-size: 30px;
             }
             .image41,.image42,.image43{
                 width:240px;
                 height:500px;
-                margin-left:5px;
+                margin-left:-5px;
                 margin-bottom:20px;
             }
             .image41{
@@ -423,11 +424,13 @@
              .page6 .p62{
                 max-width:250px;
                 font-size: 20px;
+                text-align: center;
              }
              .page6 .pp{
                 margin:0;
                 max-width:280px;
                 font-size: 15px;
+                text-align: center;
              }
              .page7{
                 max-width:400px;
@@ -508,7 +511,7 @@
                 color:#74b41d;
              }
              iframe{
-                width:360px;
+                width:340px;
                 height:280px;
                 margin-left:5px;
              }
