--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                 height:450px;
              }
              .page12{
-                max-width:360px;
+                max-width:340px;
                 margin-left:-10px;
                 display: flex;
                 justify-content: space-between;
@@ -312,7 +312,6 @@
              .page12 img{
                 width:90px;
                 height:90px;
-                margin:0;
              }
              .page13{
                 width:400px;
@@ -349,7 +348,7 @@
              }
              .page4{
                 width:400px;
-                height:1560px;
+                height:1580px;
              }
              .page41 {
                width:80%;
@@ -364,6 +363,9 @@
                 margin-left:-5px;
                 margin-bottom:20px;
             }
+            .image43{
+                margin-bottom:100px;
+            }
             .image41{
                 margin-top:-640px;
             }
@@ -376,15 +378,12 @@
                 display: flex;
                 flex-direction: column;
              }
-             .page5{
-                max-width:400px;
-                height:1000px;
-             }
+             
              .line{
                 margin-left:-10px;
              }
              .page5{
-                width:360px;
+                width:400px;
                 min-height:1450px;
              }
              .page51{
