--- a/index.html
+++ b/index.html
@@ -11,15 +11,18 @@
     <style>
 
         body{
-            width:100vw;
+            width:1370px;
             height:100vh;
             margin:0;
             overflow-x: hidden;
         }
+        body::-webkit-scrollbar{
+            display: none;
+        }
         .page1{
             margin:0;
             padding:0;
-            width:100vw;
+            width:1370px;
             height:625px;
             background-color: pink;
         }
@@ -127,7 +130,7 @@
             opacity:0.8;
         }
         .page2{
-            width:100vw;
+            width:1370px;
             height:230px;
             background-color: rgb(56, 188, 240);
             display: flex;
@@ -139,7 +142,7 @@
             padding-left:120px;
         }
         .page3{
-            width:100vw;
+            width:1370px;
             height: 200px;
             background-color: #ffd936;
             
@@ -162,7 +165,7 @@
             font-weight: 700;
         }
         .page4{
-            width:100vw;
+            width:1370px;
             height:920px;
             background-color: #cb8585;
             display: flex;
@@ -261,8 +264,8 @@
              html,body{
                 margin:0;
                 max-width:400px;
+                height:7170px;
                 overflow-x: hidden;
-                
              }
              .tags ul{
                 padding:0;
@@ -625,8 +628,17 @@
                 .page3,.page4,.page5,.page6,.page7,.page8,.page10,.page11,.page121{
                     max-width:720px;
                 }
+                .page3{
+                    text-align: center;
+                }
                 .app{
                     left:50%;
+                }
+                .page4{
+                    height:1800px;
+                }
+                .page5{
+                    min-height:1550px;
                 }
                 .page42,.page52{
                     flex-direction: column;
@@ -634,24 +646,50 @@
                 .page42{
                     width:700px;
                 }
+                .image41{
+                    margin-top:-890px;
+                }
                 .page52{
                     max-width:500px;
+                    margin-top:400px;
                 }
                 .page11 .page114{
                     width:100px;
                 }
+                .page7{
+                    min-height:1600px;
+                }
                 .page72,.page73{
                     flex-direction: column;
                 }
+                .page6{
+                    min-height:1500px;
+                }
+                .image61{
+                    height:100px
+                }
                 .image61 img{
-                    width:50px;
-                    height:50px;
+                    width:500px;
+                    height:550px;
+                    margin-left:-200px;
                 }
                 .page62{
-                    width:100px;
+                    width:400px;
+                    max-height:570px;
+                    margin-top:600px;
+                    margin-left:-550px;
+                    text-align: center;
                 }
                 .page62 .pp{
-                    width:100px;
+                    width:600px;
+                    font-size: 30px;
+                }
+                .page62 .p62{
+                    margin-left: 100px;
+                }
+                .app{
+                    top:60%;
+                    left:90%;
                 }
                 /*.page31 h1{
                     font-size: 45px;
@@ -982,7 +1020,7 @@
     </div>
     <style>
         .page5{
-            width:100vw;
+            width:1370px;
             height:750px;
             background-color: #9e99a4;
         }
@@ -1018,7 +1056,7 @@
             background-color: #74b41d;
         }
         .page6{
-            width:100vw;
+            width:1370px;
             height:560px;
             background-color: #6EC1E4;
             display: flex;
@@ -1047,7 +1085,7 @@
         font-weight: 900;
         }
         .page7{
-            width:100vw;
+            width:1370px;
             height:1000px;
             background-color: #121a23;
             display: flex;
@@ -1092,12 +1130,12 @@
             margin-top:-15px;
         }
         .page8{
-            width:100vw;
+            width:1370px;
             height:100px;
             background-color: white;
         }
         .page10{
-            width:100vw;
+            width:1370px;
             height:300px;
             background-color: #212121;
         }
@@ -1129,7 +1167,7 @@
             opacity:0.7;
         }
         .page11{
-            width:100vw;
+            width:1370px;
             height:800px;
             background: #000000;
             color:white;
@@ -1183,7 +1221,7 @@
             color:green;
         }
         .page121{
-            width:100vw;
+            width:1370px;
             height:100px;
             background-color: #120101;
             display: flex;
