--- a/index.html
+++ b/index.html
@@ -933,7 +933,7 @@
             .page62 .pp{
                 margin: 0;
                 width:700px;
-                font-size: 2.5vmin;
+                font-size: 30px;
                 text-align: center;
             }
             .pp br{
